tests/ui/derive-invariant/helper-no-expr/expected
error: Cannot derive impl for `PositivePoint`
   |
11 | #[derive(kani::Invariant)]
   |          ^^^^^^^^^^^^^^^
   |
note: invariant condition in field `x` could not be parsed - `Err("unexpected end of input, expected an expression")`
